Fix the scrollbar on comments

--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -7,6 +7,7 @@
 	padding: 10px;
 	border-bottom: 1px dotted #9E9E9E;
 	margin-bottom: 15px;
+    width: 100%;
 }
 
 /* Comment form */
